# unitd

./: CMakeLists.txt  askconsole.c  early.c  inittab.c  log.h  procd.c  procd.h  rcS.c  rcS.h  signal.c  state.c  system.c  ubus.c  unitd.c  unitd.h  watchdog.c  watchdog.h
service/: instance.c  instance.h  service.c  service.h  trigger.c  watch.c
src/: CMakeLists.txt
src/askfirst/: CMakeLists.txt  askfirst.c
src/unitd/: CMakeLists.txt  askconsole.c  early.c  log.h  signal.c  state.c  system.c  ubus.c  unitd.c  unitd.h  utils.c  utils.h  watchdog.c
src/unitd/service/: instance.c  instance.h  service.c
src/unitd/unit/: queue.c  service.c  unit.c  unit.h
utils/: askfirst.c  utils.c  utils.h
